--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <div style="display: flex;">
                         <button class="btn title-bar" id="minimize">—</button>
-                        <button class="btn title-bar" id="quit" style="border-top-right-radius: 10px;">
+                        <button class="btn title-bar" id="quit">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-x-lg" viewBox="0 0 16 16">
                                 <path
@@ -54,7 +54,13 @@
                         <div class="logo"></div>
                         <button class="btn transparent">Dashboard</button>
                     </div>
-                    <button class="btn green" id="new-space">New +</button>
+                    <button class="btn green" id="new-space">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-plus" viewBox="0 0 16 16">
+                            <path
+                                d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
+                        </svg>
+                    </button>
                     <div class="search-bar">
                         <svg class="icon" aria-hidden="true" viewBox="0 0 24 24">
                             <g>
