Website load animations

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <nav>
-        <div class="space-navbar" data-cursor="-text" data-cursor-text="Explore" data-cursor-stick>
-            <h1 class="gradient">space</h1>
+        <div class="space-navbar">
+            <h1 class="gradient" data-cursor="-text" data-cursor-text="Explore" data-cursor-stick>space</h1>
         </div>
     </nav>
 
