--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <a href="https://github.com/nopde/space-app/releases/latest" target="_blank" class="header white"
                 data-cursor="-hidden">Download -></a>
-            <button class="header" data-cursor="-hidden">Learn more</button>
+            <a href="/components" class="header" data-cursor="-hidden">Components</a>
         </div>
     </header>
 
