--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/cursor.css">
-    <link rel="stylesheet" href="assets/css/app-preview.css">
+    <title>Space</title>
+    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/cursor.css">
+    <link rel="stylesheet" href="../../assets/css/app-preview.css">
     <link href="https://unpkg.com/css.gg@2.0.0/icons/css/trash.css" rel="stylesheet">
     <link href="https://unpkg.com/css.gg@2.0.0/icons/css/folder.css" rel="stylesheet">
 </head>
@@ -125,7 +125,7 @@
     </footer>
 
     <script src="https://unpkg.com/gsap@3.9.0/dist/gsap.min.js"></script>
-    <script src="assets/js/webFunctions.js" type="module"></script>
+    <script src="../../assets/js/webFunctions.js" type="module"></script>
 </body>
 
 </html>
